# msp430g2xx-hal

./: Cargo.toml  build.rs
.cargo/: config.toml
examples/: watchdog.rs
src/: lib.rs  watchdog.rs
